# fireuq

./: .gitignore  Makefile  README.md  correlations.mk  download.mk  mfmcs.mk  pyproject.toml  python.mk
fireuq/dnn/: dnn_optimize.py  evaluate_dnn.py  train_dnn.py
fireuq/mfmc/: correlation_coeffs.py  mfmc_analysis.py
